--- a/src/index.html
+++ b/src/index.html
@@ -1,34 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="./img/favicon.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Portfolio</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.min.css"
+      integrity="sha512-q6WgHqiHlKyOqslT/lgBgodhd03Wp4BEqKeW6nNtlOY4quzyG3VoQKFrieaCeSnuVseNKRGpGeDU3qPmabCANg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="./img/favicon.svg" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Portfolio</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.min.css"
-    integrity="sha512-q6WgHqiHlKyOqslT/lgBgodhd03Wp4BEqKeW6nNtlOY4quzyG3VoQKFrieaCeSnuVseNKRGpGeDU3qPmabCANg=="
-    crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <link rel="stylesheet" href="./css/styles.css" />
-</head>
+  <body>
+    <load src="./partials/header.html" />
 
-<body>
-  <load src="./partials/header.html" />
+    <main>
+      <load src="./partials/hero.html" />
+      <load src="./partials/about-me.html" />
+      <load src="./partials/benefits.html" />
+      <load src="./partials/projects.html" />
+      <load src="./partials/faq.html" />
+      <load src="./partials/covers.html" />
+      <load src="./partials/reviews.html" />
+    </main>
 
-  <main>
-    <load src="./partials/hero.html" />
-    <load src="./partials/about-me.html" />
-    <load src="./partials/benefits.html" />
-    <load src="./partials/projects.html" />
-    <load src="./partials/faq.html" />
-    <load src="./partials/covers.html" />
-    <load src="./partials/reviews.html" />
-  </main>
+    <load src="./partials/work-together.html" />
+    <load src="./partials/modal.html" />
+    <load src="./partials/scroll-to-top.html" />
 
-  <load src="./partials/work-together.html" />
-  <load src="./partials/modal.html" />
-
-  <script type="module" src="./main.js"></script>
-</body>
-
+    <script type="module" src="./main.js"></script>
+  </body>
 </html>
